p2/scripts/app-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: LoadBalancer
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
