p2/scripts/app-three-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: LoadBalancer
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
