p2/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-all-apps
spec:
  ingressClassName: nginx
  rules:
  - host: "app1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: app-one
            port:
              number: 80
  - host: "app2.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: app-two
            port:
              number: 80
  defaultBackend:
    service:
      name: app-three
      port:
        number: 80
